--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,7 @@ body {
 
 .area {
   background: #131313;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  background: -webkit-linear-gradient(to left, #131313, #131313);
   width: 100%;
   height: 100vh;
 }
