--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ body {
   background: #131313;
   background: -webkit-linear-gradient(to left, #131313, #131313);
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
 }
 
 .circles {
