--- a/app/globals.css
+++ b/app/globals.css
@@ -46,6 +46,20 @@ body {
   top: 50vh;
 }
 
+.gradient-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 25%; /* Changed from 100% to 50% */
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.75) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  z-index: 0;
+}
+
 .context h1 {
   text-align: center;
   color: #fff;
